# cvec

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cvec.7  cvec.c  cvec.h  cvec_filter.c  cvec_fourier.c  cvec_int.c  cvec_matrix.c  cvec_sort.c  cvec_stats.c  ffttest.c  filtertest.c  fittest.c  mattest.c  omptest.c  readme.md  sorttest.c
src/: cvec.c  cvec.h  cvec_error.c  cvec_filter.c  cvec_fourier.c  cvec_int.c  cvec_io.c  cvec_matrix.c  cvec_sort.c  cvec_stats.c  display.c  error.c  filter.c  filter_template.c  filter_template.h  fourier.c  int_sort.c  int_vector.c  io.c  jobs.c  limits.c  limits_template.c  limits_template.h  matrices.c  signalproc.c  sort.c  sort_template.c  sort_template.h  stats.c  stats_template.c  stats_template.h  uint_vector.c  vector.c  vector_template.c  vector_template.h
tests/: ffttest.c  filtertest.c  mattest.c  omptest.c  sorttest.c  vector_creation_test.c
